# rcrypt

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: test.yml
src/: algorithms.rs  lib.rs
tests/: basic.rs
