[package]
name = "rcrypt"
version = "0.4.0-alpha.1"
edition = "2021"
authors = ["Sayan Nandan <nandansayan@outlook.com>"]
license = "Apache-2.0"
description = "A compact hashing/salting library based on bcrypt with smaller hashes"
homepage = "https://github.com/ohsayan/rcrypt"
documentation = "https://docs.rs/rcrypt"
repository = "https://github.com/ohsayan/rcrypt"
readme = "README.md"
categories = ["cryptography", "algorithms"]
keywords = ["bcrypt", "hash", "salt", "bmcf", "mcf"]

[dependencies]
base64 = "0.13"
getrandom = "0.2"
blowfish = { version = "0.9", features = ["bcrypt"] }
